Fix misaligned avatar in mail preview

--- a/mail/templates/default/app.css
+++ b/mail/templates/default/app.css
@@ -1116,3 +1116,6 @@ et2-select-email::part(tag__content) {
 et2-vbox.addresses::part(base) {
 	gap: 0px;
 }
+.mailPreviewHeaders et2-lavatar {
+	margin-top: 3px;
+}
